--- a/plugins/Live/templates/_profileSummary.twig
+++ b/plugins/Live/templates/_profileSummary.twig
@@ -1,4 +1,4 @@
-<div class="visitor-profile-summary visitor-profile-overview">
+<div class="visitor-profile-summary visitor-profile-resume">
     <h1>{{ 'General_Summary'|translate }}</h1>
     <div>
         {% if visitorData.totalPageViews != visitorData.totalActions %}
