--- a/plugins/Live/stylesheets/visitor_profile.less
+++ b/plugins/Live/stylesheets/visitor_profile.less
@@ -115,11 +115,6 @@
   color: #5e5e5c;
 }
 
-.visitor-profile-export {
-  vertical-align: middle;
-  margin-top: 3px;
-}
-
 .visitor-profile-options {
   z-index: 10;
   position: absolute;
@@ -305,11 +300,8 @@
 }
 
 .visitor-profile-id {
-  height: 24px;
-
-  .icon-export {
-    vertical-align: top;
-  }
+  line-height: 24px;
+  vertical-align: middle;
 }
 
 .visitor-profile-map {
@@ -565,7 +557,6 @@ span.visitor-profile-goal-name {
 .visitor-profile-visit-details {
   background-color: #fff;
   padding: 10px;
-  border-bottom: 1px solid #f2f2f2;
   overflow: hidden;
 
   .visitorLogIconWithDetails {
