--- a/plugins/Actions/templates/_profileSummary.twig
+++ b/plugins/Actions/templates/_profileSummary.twig
@@ -8,7 +8,7 @@
             <ul>
                 {% for url,count in visitorData.visitedPages %}
                     {% if loop.index < 6 and count > 1 %}
-                        <li><span class="repeat icon-refresh" title="{{ 'Live_PageRefreshed'|translate }}">{{ count }}</span>
+                        <li><span class="repeat icon-refresh" title="{{ 'Actions_PageViewsByVisitor'|translate }}">{{ count }}</span>
                             {% if url|trim|lower starts with 'javascript:' or
                             url|trim|lower starts with 'vbscript:' or
                             url|trim|lower starts with 'data:' %}
